--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<!-- This will show up on the tab in your browser -->
+<head>
+    <!-- This will show up on the tab in your browser -->
+    <title>My Portfolio</title>
+
+    <!-- This links your css file to the html -->
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+
+<body>
+  
+  <!-- This will show up on the tab in your browser -->
 <p><strong>Unibench Schema</strong></p>
 
 <p>{<br />
@@ -2190,3 +2200,5 @@
 &nbsp; &nbsp; &nbsp; &nbsp; ]<br />
 &nbsp; &nbsp; }<br />
 }</p>
+  
+</body>
